static/css/main.css
/*-------global/absolutes------*/
html {
    overflow-y: scroll;
}
body {
    padding: 0;
    margin: 0;
	font-size: 13px;
	font-family: Tahoma;
	color: #555;
}

ul, ol, li, form, img, p {
	border: none;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

a {
	color: #4297D7;
}

.clear { clear: both; }
.inline { display: inline ;}

#wrapper {
	width: 500px;
    margin: 10px auto 10px auto;
}

#logo {
    padding: 0px;
}
	#logo a {
		text-indent: -9999px;
		display: block;
		width: 150px;
		height: 58px;
		background: transparent url(../images/logo.png) no-repeat left top;
	}
	#logo a:hover {
		background: transparent url(../images/logo-hover.png) no-repeat left top;
	}

#instructions {
	margin-top: 10px;
}

/*-------search---*/
#search {
    background-color: #f3f3f3;
    font-family: Arial;
	width: 480px;
	display: inline-block;
    padding: 10px;
	clear: left;
	border-bottom: 1px solid #ccc;
	margin-top: 10px;
	position: relative;
}   
	a#faq {
        position: absolute;
        right: 10px;
    }

    #search p {
        margin: 10px 0 0 0;
    }
    
    p#from, p#to {
        float: left;
        padding: 0;
        margin: 0;
    }

        #begin_date, #end_date {
            width: 100px;
        }
    
            .ui-datepicker-trigger {
                position: relative;
                vertical-align: middle;
                left: -20px;
            }
    #search_btn {
        width: 80px;
    }

    #options {
        display: none;
    }
        #options label {
            margin-right: 10px;
        }
        #options_passed, #options_failed {
            margin-left: 0;
        }

/*-----results------*/
#results { 
	display: none;
    margin-top: 10px;
}

#results span{
    font-size: 12px;
}


#num_results { margin-top: 10px; }
#result_header h3{ background: #fff !important; }

ul#results li h3 { 
    background: transparent url(/static/images/listgrad.png) repeat;
    font-weight: normal;
    margin: 0;
}
ul#results li.record:hover {
	cursor: pointer;
}
ul#results li.record h3:hover { 
    background: transparent url(/static/images/listgradinverse.png) repeat;
}
ul#results li.record p {
/*    display: none;*/
    margin: 0;
    padding: 20px;
}

#date_header a, #time_header a, #accession_header a, #status_header a { text-decoration: none; color: #555; }
#accession_header a:hover, #status_header a:hover { text-decoration: underline;}

#date_header, #time_header, #accession_header, #status_header,
.date, .time, .accession, .status, .status-fail, .status-pass { display: inline-block; padding: 5px;}

#date_header, .date { 
    width: 115px;
    text-indent: 15px;
}
.date_unfold { background: transparent url(/static/images/unfold.png) no-repeat; }
.date_fold { background: transparent url(/static/images/fold.png) no-repeat; }

#time_header, .time { width: 115px;}
#accession_header, .accession { width: 115px;}
#status_header, .status, .status-fail, .status-pass { width: 95px; text-align: center;}
    .status-fail { color: coral;}
    .status-pass { color: green;}

/*----pagination------*/
#pagination {
    margin: 10px 0 0 0;
}

.current_page, .page_select {
    margin-right: 8px;
    text-decoration: none;
}
.current_page {

}
.page_select {
}

/*---faq-----*/
#faq_contents {

}

